--- a/CoLab/Analisis_poros_HOLE2.ipynb
+++ b/CoLab/Analisis_poros_HOLE2.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/camilotayac/computational_chemistry-TC/blob/master/CoLab/Analisis_poros_HOLE2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "fh1bcfjK3CNj"
       },
       "source": [
@@ -994,7 +1004,8 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNzqcMxK+xzhulz+chpiCv4"
+      "authorship_tag": "ABX9TyNzqcMxK+xzhulz+chpiCv4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
