agregue entrada a capeta examples

--- a/Colab/Analisis_poros_HOLE2.ipynb
+++ b/Colab/Analisis_poros_HOLE2.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/camilotayac/computational_chemistry-TC/blob/master/CoLab/Analisis_poros_HOLE2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/camilotayac/computational_chemistry-TC/blob/master/Colab/Analisis_poros_HOLE2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -413,22 +413,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lv4tq8p7MG2S",
-        "outputId": "59def132-e8de-431a-e763-42c92db6361e"
+        "outputId": "83d1ece8-fad8-46e9-ef37-f5709feeb232"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n",
-            "/content/drive/MyDrive/cngc\n"
+            "Cloning into 'computational_chemistry-TC'...\n",
+            "remote: Enumerating objects: 87, done.\u001b[K\n",
+            "remote: Counting objects: 100% (87/87), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (81/81), done.\u001b[K\n",
+            "remote: Total 87 (delta 28), reused 20 (delta 1), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (87/87), 575.91 KiB | 10.28 MiB/s, done.\n",
+            "Resolving deltas: 100% (28/28), done.\n",
+            "/content/computational_chemistry-TC/CoLab/computational_chemistry-TC/Examples\n"
           ]
         }
       ],
@@ -443,12 +449,35 @@
         "\n",
         "if files == 'Tutorial files - Archivos del tutorial':\n",
         "  !git clone https://github.com/camilotayac/computational_chemistry-TC.git\n",
-        "  %cd computational_chemistry-TC/CoLab\n",
+        "  %cd computational_chemistry-TC/Examples\n",
         "elif files == 'Own files - Archivos propios':\n",
         "  from google.colab import drive\n",
         "  drive.mount('/content/drive')\n",
         "  carpeta = \"/content/drive/MyDrive/\" + drive_folder_path\n",
         "  %cd {carpeta}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3CjCiXuDIS63",
+        "outputId": "b2854d7f-56a6-4ebc-8182-2d5427d7b096"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "examplos.txt\n"
+          ]
+        }
       ]
     },
     {
@@ -1036,7 +1065,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYbKAGfOpZOoOAtPlmnCGH",
+      "authorship_tag": "ABX9TyPWbKT40DeG2+NWY6cbZ1WT",
       "include_colab_link": true
     },
     "kernelspec": {
