--- a/Colab/pore_analysis_HOLE2.ipynb
+++ b/Colab/pore_analysis_HOLE2.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -361,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -440,7 +440,7 @@
         "file_name_trajectory = file_name_trajectory.split(\" \")\n",
         "\n",
         "# @markdown ### **🇺🇸** - Extension trajectory **.xtc** o **.trr**\n",
-        "# @markdown ### **🇪🇸** - Trayectoria con la extensión **.xtc** o **.trr**\n",
+        "# @markdown ### **🇪🇸** - Trayectoria con la extensión **.xtc**, **.dcd** o **.trr**\n",
         "\n",
         "name_trajectory = \"membrane_protein.xtc\" # @param {type:\"string\"}\n",
         "name_trajectory = name_trajectory.split(\" \")\n",
@@ -601,7 +601,7 @@
         "cellView": "form",
         "id": "RMn5PK25sRl_"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -764,7 +764,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTIc+mNmJCBolNQ5WzYWmG",
+      "authorship_tag": "ABX9TyOlnhDekq18Ec7kJSO5plAp",
       "include_colab_link": true
     },
     "kernelspec": {
